--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
         "php": ">=5.3",
         "skyzyx/mimetypes": "~1.1",
         "apfelbox/php-file-download": "2.*",
-        "phpoffice/phpexcel": "1.*",
+        "phpoffice/phpexcel": "dev-master",
         "phpmailer/phpmailer": "5.*",
         "mpdf/mpdf": "5.*"
     }
