--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "apfelbox/php-file-download": "2.*",
         "phpoffice/phpexcel": "dev-master",
         "phpmailer/phpmailer": "5.*",
-        "mpdf/mpdf": "5.*"
+        "mpdf/mpdf": "5.*",
+        "paquettg/string-encode": "dev-master"
     }
 }
