--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "phpmailer/phpmailer": "5.*",
         "mpdf/mpdf": "5.*",
         "adodb/adodb-php": "5.19",
-        "adldap/adldap": "4.0.*"
+        "adldap/adldap": "4.0.*",
+        "raveren/kint": "v0.9"
     }
 }
