se ajustan los indicadores 14 y 15 cambiando la formula de regresion lineal y se adiciona cache a las consultas

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "mpdf/mpdf": "5.*",
         "adodb/adodb-php": "5.19",
         "adldap/adldap": "4.0.*",
-        "raveren/kint": "v0.9"
+        "raveren/kint": "v0.9",
+        "phpfastcache/phpfastcache": "3.0.*"
     }
 }
