--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
         "php": ">=5.3",
         "skyzyx/mimetypes": "~1.1",
         "apfelbox/php-file-download": "2.*",
+        "phpfastcache/phpfastcache": "3.0.*",
         "phpoffice/phpexcel": "1.8.*",
         "phpmailer/phpmailer": "5.*",
         "mpdf/mpdf": "5.*",
         "adodb/adodb-php": "5.19",
         "adldap/adldap": "4.0.*",
-        "raveren/kint": "v0.9",
-        "phpfastcache/phpfastcache": "3.0.*"
+        "raveren/kint": "v0.9"
     }
 }
