--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "mpdf/mpdf": "5.*",
         "adodb/adodb-php": "5.19",
         "adldap/adldap": "4.0.*",
-        "raveren/kint": "v0.9"
+        "kint-php/kint": "^2.1",
+        "vlucas/phpdotenv": "^2.4"
     }
 }
